--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,12 +8,8 @@ jobs:
 
   strategy:
     matrix:
-      vc141-debug:
+      vc141:
         BUILD_TOOLSET_VERSION: '141'
-        BUILD_CONFIGURATION: 'debug'
-      vc141-release:
-        BUILD_TOOLSET_VERSION: '141'
-        BUILD_CONFIGURATION: 'release'
 
   variables:
     CMAKE_GENERATOR: 'Visual Studio 15 2017 Win64'
@@ -25,10 +21,10 @@ jobs:
     inputs:
       filename: 'bootstrap-vcpkg.bat'
 
-  - script: vcpkg install boost-dll boost-any boost-multi-index fmt spdlog yaml-cpp assimp
+  - script: vcpkg install boost-dll boost-any boost-multi-index fmt spdlog yaml-cpp assimp imgui
     displayName: 'Install for render_pipeline_cpp'
 
-  - script: vcpkg install fmt openvr imgui
+  - script: vcpkg install openvr
     displayName: 'Install for rpcpp_plugins'
 
   - task: ArchiveFiles@2
@@ -39,4 +35,4 @@ jobs:
 
   - task: PublishBuildArtifacts@1
     inputs:
-      artifactName: '$(REPO_NAME)-vc$(BUILD_TOOLSET_VERSION)-$(BUILD_CONFIGURATION)'
+      artifactName: '$(REPO_NAME)-vc$(BUILD_TOOLSET_VERSION)'
